Changelog
=========

10.8.dev0 - (unreleased)
------------------------

10.7 - (2017-04-24)
-------------------
* Change: updated package information
  [eduard-fironda]

10.6 - (2017-01-17)
-------------------
* Bug fix: Add extra_require for zope2 only deployments
  [avoinea]

10.5 - (2016-12-28)
-------------------
* Change: Make UnicodeDecodeError more verbose
  [voineali refs #79895]

10.4 - (2016-10-31)
-------------------
* Change: manage_beforeDelete now safely checks for request
  [ichim-david refs #75296]

10.3 - (2016-05-19)
-------------------
* Bug fix: Fix pylint warnings
  [chiridra refs #71940]

10.2 - (2016-05-04)
-------------------
* Feature: html body field for daviz and gis application
  - added new field "body"
  - modified the view template
  [chiridra refs #70146]

10.1 - (2016-03-14)
-------------------
* Bug fix: fixed provenances field when using eea.daviz in non
  eea environment
  [ichimdav]
* Bugfix: Fixed order of column labels when labels are numbers
  [szabozo0 refs #69360]

10.0 - (2016-03-01)
-------------------
* Change: Data provenance is no longer required except for publishing
  [ichimdav refs #68228]

9.9 - (2016-02-15)
------------------
* Bug fix: check for Browser within dataservice.js otherwise Sparql edit
  fails when plone.quickupload ins't present
  [ichimdav]

9.8 - (2015-11-16)
------------------
* Feature: Improved chart chooser for inline embed to show only googlecharts:
  exhibits are currently not supported for embedding
  [chiridra refs #30417]
* Feature: relate to object if resolveuid is used in data provenance
  [lucas refs #30065]

9.7 - (2015-07-28)
------------------
* Bug Fix: unload video over HTTPS
  [lucas refs #26201]

9.6 - (2015-07-06)
------------------
* Bug Fix: tutorials use now youtube api v.3
  [lucas refs #26201]

9.5 - (2015-05-15)
------------------
* Change: Mark data provenance fields as required
  [szabozo0 refs #25341]

9.4 - (2015-05-05)
------------------